# turing-machine

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.sh  index.html  manifest.json  tm.thmTheme  turing-machine.js  turing-machine_bg.wasm
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
Examples/: Example1.tm  Example2.tm  Example3.tm  Example4.tm  LectureExample.tm  test.tm
assets/: CNAME  ads.txt  manifest.json  save_file.js  sw.js  utils.js
assets/ui/exercise1/: code.tm
locales/: about_window.json  ads.json  debug_window.json  errors.json  main_window.json  tooltips.json
locales/windows/: book_window.json  composition_window.json  infinite_loop_window.json
src/: config.rs  error_window.rs  instruction.rs  lib.rs  main.rs  syntax_highlighter.rs  turing.pest  turing.rs  turing_widget.rs  window.rs
src/turing/: instruction.rs  mod.rs  output.rs  turing.pest  turing.rs
src/windows/: about_window.rs  book.rs  compsition_help_window.rs  debug_window.rs  error_window.rs  infinite_loop_window.rs  mod.rs
src/windows/workbook/: book.rs  exercise.rs  mod.rs  wb_editor.rs
turing/: Cargo.toml
