[package]
name = "turing-machine"
version = "1.2.1"
edition = "2021"
authors = ["Marcos Gutiérrez Alonso <margual56@gmail.com>"]
description = "Turing Machine Simulator"
repository = "https://github.com/margual56/turing-machine-2.0"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1", features = ["derive"] }
pest = "^2.4"
pest_derive = "^2.4"
eframe = "^0.21"
rfd = "^0.11"
egui_extras = {version = "^0.21", features = ["image"]}
image = { version = "^0.24", default-features = false, features = ["png"] }
webbrowser = "0.8.3" # There is a vulnerability in version 0.8.5
internationalization = "0.0.3"
log = "0.4.17"
env_logger = "0.10.0"
turing-lib = "^1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
clap-verbosity-flag = "2.0.0"
log = "0.4.17"
env_logger = "0.10.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
futures = "0.3"


[profile.release]
opt-level = 2 # fast and small wasm
