[package]
name = "turing-machine"
version = "1.2.1"
edition = "2021"
authors = ["Marcos Gutiérrez Alonso <margual56@gmail.com>"]
description = "Turing Machine Simulator"
repository = "https://github.com/margual56/turing-machine-2.0"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
pest = "^2.7"
pest_derive = "^2.4"
eframe = {version = "^0.22", features = ["wayland"]}
rfd = "^0.11"
egui_extras = {version = "^0.22", features = ["image"]}
image = { version = "^0.24", default-features = false, features = ["jpeg", "png"] }
webbrowser = "^0.8"
internationalization = "0.0.3"
turing-lib = "^2.1"
serde = {version = "^1.0", features = ["derive"]}
serde_bytes = "0.11"
bincode = "1.3"
log = "^0.4"
env_logger = "^0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
clap-verbosity-flag = "2.0.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "^0.1"
tracing-wasm = "^0.2"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
futures = "0.3"
wgpu = { version = "^0.17", features = ["webgl"] }
web-sys = "^0.3"
js-sys = "^0.3"
base64 = "^0.21"

[profile.release]
opt-level = 2 # fast and small wasm


[features]
# no features by default
default = []

# Add feature "foo" here, then you can use it. 
# Our "foo" feature depends on nothing else.
teacher = []
