[package]
name = "turing-machine"
version = "1.3.0"
edition = "2021"
authors = ["Marcos Gutiérrez Alonso <margual56@gmail.com>"]
description = "Turing Machine Simulator"
repository = "https://github.com/margual56/turing-machine-2.0"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.7"
pest_derive = "^2.4"
eframe = {version = "^0.22", features = ["wayland"]}
rfd = "^0.11"
egui_extras = {version = "^0.22", features = ["image"]}
image = { version = "^0.24", default-features = false, features = ["jpeg", "png"] }
webbrowser = "^0.8"
internationalization = "0.0.3"
turing-lib = "^2.1"
serde = {version = "^1.0", features = ["derive"]}
serde_bytes = "0.11"
bincode = "1.3"
sys-locale = "^0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toml = "0.7.6"
directories = "^5.0"
log = "^0.4"
env_logger = "^0.10"
tracing-subscriber = "0.3"
clap = { version = "^4.3", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
version = {git = "https://github.com/turing-marcos/rs-version.git", tag = "v0.1.2"}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.2.0", features = ["web"] }
pollster = "0.3.0"
console_error_panic_hook = "^0.1"
tracing-wasm = "^0.2"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
futures = "0.3"
wgpu = { version = "^0.17", features = ["webgl"] }
web-sys = "^0.3"
js-sys = "^0.3"
base64 = "^0.21"

[profile.release]
panic = 'abort'     # Do not perform backtrace for panic on release builds.
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Perform optimizations on all codegen units.
lto = true          # Perform link-time optimizations (slower build time)

[features]
# no features by default
default = []

# Add feature "foo" here, then you can use it. 
# Our "foo" feature depends on nothing else.
teacher = []
